<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.angelicag.app.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/stopwatch_value"
        android:text="00:00:00"
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_large"/>


    <Button
        android:id="@+id/start_stopwatch_button"
        android:text="@string/start_stopwatch_button_label"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/stopwatch_value"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startStopwatch"/>


    <Button
        android:id="@+id/stop_stopwatch_button"
        android:text="@string/stop_stopwatch_button_label"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/stopwatch_value"
        android:layout_toRightOf="@+id/start_stopwatch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="stopStopwatch"/>


    <Button
        android:id="@+id/reset_stopwatch_button"
        android:text="@string/reset_stopwatch_button_label"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/stopwatch_value"
        android:layout_toLeftOf="@+id/lap_stopwatch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="resetStopwatch"/>

    <Button
        android:id="@+id/lap_stopwatch_button"
        android:text="@string/lap_stopwatch_button_label"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/stopwatch_value"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="lapStopwatch"/>

    <TextView
        android:id="@+id/lap_value"
        android:text="lap"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/lap_stopwatch_button"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_large"/>

    <ListView
        android:id="@+id/laplist"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/reset_stopwatch_button"
        android:background="#CCC"/>


</RelativeLayout>
